Implemented full functionality for hotels create and update.